test/semantic-errors/6.pas
program p;
begin writeln(1)end;
begin writeln(1)end.
